Aprendendo comando server postgre

--- a/doc/1.3 - Instalando_Postgres_Codespace.md
+++ b/doc/1.3 - Instalando_Postgres_Codespace.md
@@ -7,13 +7,15 @@ por linhas de código com docker, segue os passos abaixo:
 
 2 - Rodar um container PostgreSQL
 
-    use o comando: docker run --name postgres-codespace -e POSTGRES_PASSWORD=suasenha -e POSTGRES_DB=meubanco -p 5432:5432 -d postgres
+    use o comando com atenção nas Observações: 
+        
+        docker run --name postgres-codespace -e POSTGRES_PASSWORD=suasenha -e POSTGRES_DB=meubanco -p 5432:5432 -d postgres
 
     Observações: 
 
         POSTGRES_PASSWORD=suasenha → substitua suasenha pela senha que você quer.
 
-        POSTGRES_DB=meubanco → substitua meubanco pelo nome do seu banco.
+        POSTGRES_DB=meubanco → substitua meubanco pelo nome: laudinho
 
 
 3 - Testar se o banco está rodando:
@@ -28,3 +30,26 @@ por linhas de código com docker, segue os passos abaixo:
     
         sudo apt update
         sudo apt install postgresql-client
+
+    Depois conecte com:
+
+        psql -h localhost -U postgres -d meubanco
+
+        Quando pedir senha, use a senha que definiu em POSTGRES_PASSWORD.
+
+5 -Configurar seu .env para o Prisma
+
+    No seu arquivo .env, coloque:
+
+        DATABASE_URL="postgresql://postgres:suasenha@localhost:5432/meubanco?schema=public"
+
+6 - Rodar a migração Prisma
+
+    Agora no terminal do Codespace, rode:
+
+        npx prisma migrate dev
+    
+    E deve funcionar, pois o banco está local e acessível.
+
+
+
