Atualizando ambiente back-end codespace

--- a/doc/1.1 - Ambiente_Dev_Back_Codespace.md
+++ b/doc/1.1 - Ambiente_Dev_Back_Codespace.md
@@ -108,3 +108,25 @@
     Acesse localhost:3000 no preview do Codespace para testar API.
 
     Para abrir Prisma Studio, acesse localhost:5555.
+
+
+7 - Instalando extensões para o VSCode do CodeSpace:
+
+    - REST CLIENT -> Nosso Postman/Insomia
+
+    - PDF Viewer
+
+    - Git Graph
+
+
+8 - Algumas coisas vai ser necessária adquirir nas documentações:
+
+    Ambiente Back-End Node + TypeScript
+
+    Instalando_Postgres_Codespace
+
+    instalando_libs_depedências_package_json
+
+    Configurando_Prisma
+
+    
