Arrumando documentação de Soluções Servidor Postgres Codespace

--- a/doc/1.4.1 - Solucao_Postgre_Codespace.md
+++ b/doc/1.4.1 - Solucao_Postgre_Codespace.md
@@ -3,7 +3,7 @@
     Ao tentar conectar ao banco PostgreSQL usando:
 
 
-        psql -h localhost -U postgres -d laudo
+        psql -h localhost -U postgres -d laudinho
 
     Recebe o erro:
 
